Metron Agent Naming: Text vs Diagram
Line 24 says the bullet points starting in line 26 reference the diagram of line 20. The first bullet speaks of "Loggregator Agent" that is not a component in the digram. I believe it should be "Metron Agent" to be consistent with the diagram.

--- a/architecture.html.md.erb
+++ b/architecture.html.md.erb
@@ -23,7 +23,7 @@ The Loggregator architecture includes components for collecting, storing, and fo
 
 The following are Loggregator components, as shown in the diagram above:
 
-- **Loggregator Agent**: Loggregator Agents run on both <%= vars.product_name %> component VMs and Diego cell VMs. They receive logs and metrics from the apps and <%= vars.product_name %> components located on those VMs. Loggregator Agents then forward the logs and metrics to Dopplers.
+- **Metron Agent**: Metron Agents run on both <%= vars.product_name %> component VMs and Diego cell VMs. They receive logs and metrics from the apps and <%= vars.product_name %> components located on those VMs. Metron Agents then forward the logs and metrics to Dopplers.
 - **Doppler**: Dopplers receive logs and metrics from Loggregator Agents, store them in temporary buffers, and forward them to Traffic Controllers.
 - **Traffic Controller**: Traffic Controllers poll Doppler servers for logs and metrics, then translate these messages from the Doppler servers as necessary for external and legacy APIs. The Loggregator Firehose is located on the Traffic Controller.
 - **Reverse Log Proxy**: Reverse Log Proxies (RLPs) collect logs and metrics from Dopplers and forward them to Syslog Adapters for syslog drains. Operators can scale up the number of RLPs based on overall log volume. 
